--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ tasks.named('test') {
 }
 
 java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
     withJavadocJar()
     withSourcesJar()
 }
